feat: :rocket: initial commit with DB connector and Navigation template
First commit. Sqlite database connector and React-navigation structure created.

--- a/app.json
+++ b/app.json
@@ -19,16 +19,23 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.pe.kne.surfiary"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.pe.kne.surfiary"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d08d43af-f3e6-4ecd-9fce-52a60932c948"
+      }
     }
   }
 }
