--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint ."
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@databases/expo": "^5.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
@@ -20,9 +22,11 @@
     "expo": "~46.0.13",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
+    "expo-dev-client": "~1.3.0",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "~0.16.2",
+    "expo-sqlite": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
@@ -35,11 +39,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^29.1.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
-    "react-test-renderer": "18.0.0",
+    "jest-expo": "^44.0.1",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "^18.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
