--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,10 +33,15 @@
           "endOfLine": "auto"
         }
       ],
+      "global-require": "off",
+      "import/no-dynamic-require": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
       "no-use-before-define": "off",
+      "react/require-default-props": "off",
       "@typescript-eslint/no-use-before-define": ["error"],
       "import/extensions": ["error", "never"],
       "react/prop-types": 0,
+      "react/jsx-props-no-spreading": "off",
       "no-shadow": "off",
       "@typescript-eslint/no-shadow": ["error"],
       "react/function-component-definition": ["error", {
