--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "npx expo start",
+    "postinstall": "patch-package",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -16,13 +17,15 @@
   "dependencies": {
     "@databases/expo": "^5.0.0",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~46.0.13",
     "expo-asset": "~8.6.1",
     "expo-constants": "~13.2.4",
-    "expo-dev-client": "~1.3.0",
+    "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "~0.16.2",
@@ -30,12 +33,18 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "patch-package": "^6.4.7",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.37.0",
     "react-native": "0.69.6",
+    "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-select-dropdown": "^2.0.4",
+    "react-native-tags-input": "^1.0.10",
+    "react-native-web": "~0.18.7",
+    "weacast-core": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
