--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.37.0",
     "react-native": "0.69.6",
+    "react-native-autocomplete-tags": "^2.0.0",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
-    "react-native-tags-input": "^1.0.10",
     "react-native-web": "~0.18.7",
     "weacast-core": "^1.5.0"
   },
