--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
       "@typescript-eslint/no-non-null-assertion": "off",
       "no-use-before-define": "off",
       "react/require-default-props": "off",
+      "camelcase": "off",
       "@typescript-eslint/no-use-before-define": ["error"],
       "import/extensions": ["error", "never"],
       "react/prop-types": 0,
