--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "dependencies": {
     "@databases/expo": "^5.0.0",
+    "@databases/websql-core": "^4.0.0",
     "@expo/vector-icons": "^13.0.0",
+    "@fortawesome/fontawesome-common-types": "5",
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~46.0.13",
     "expo-asset": "~8.6.1",
@@ -40,10 +44,13 @@
     "react-native": "0.69.6",
     "react-native-autocomplete-tags": "^2.0.0",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-select-dropdown": "^2.0.4",
+    "react-native-tab-view": "^3.3.0",
     "react-native-web": "~0.18.7",
+    "react-navigation-tabs": "^2.11.2",
     "weacast-core": "^1.5.0"
   },
   "devDependencies": {
